1. Динамическое перераспределение продуктов [#469896]